--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "typescript": "^3.9.7"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.12.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.3",
